# The-Feeling-Machine

./: .REVIEW_CHECKLIST.md  .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
core/models/: consciousness_state.py  emotional_experience.py
database/init/: 01-init-postgres.sh
database/schemas/: 01_consciousness.sql  02_felt_experiences.sql  03_emotional_patterns.sql  README.md
scripts/: setup.sh
